--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <h2>Mars Facts</h2>
+          <p>{% for hurricane in hurricanes %}
+            <li>{{ hurricane.name }}: {{ hurricane.cat }}</li>
+          {% endfor %}</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
@@ -90,7 +92,7 @@
       <hr>
 
       <footer>
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; 2018 Beth Yoder</p>
       </footer>
     </div> <!-- /container -->
 
