--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
           <h2>Latest Mars News</h2>
           <p>{{ mars.report }} </p>
           
+
+          <div class="row">
+            <div class="col-md-4">
+              <h2>Mars Weather</h2>
+              <p>{{ mars.mars_weather }} </p>    
         </div>
         <div class="row">
           <h2>Featured Mars Image</h2>
